--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_new">action_new</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
+    <string name="hintTxtItem">Enter an item here ...</string>
+    <string name="lblBtnAdd">Add Item</string>
+    <string name="txtEmpty">List is empty</string>
 </resources>
